# SIMP

./: CMakeLists.txt  README.md
include/: app.h  effects.h  font.h  image.h  menu.h  shader.h  ui.h
include/glad/: glad.h
include/stb/: stb_image.h  stb_truetype.h
shaders/: blur.frag  colorize.frag  default.frag  default.vert  default_effect.vert  invert.frag
src/: app.c  blur.c  colorize.c  effects.c  file.c  font.c  glad.c  image.c  input.c  main.c  menu.c  menu_bar.c  new.c  shader.c  side_bar.c  slider.c  transform.c  ui.c
